[gd_scene load_steps=12 format=2]

[ext_resource path="res://Train.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/back.png" type="Texture" id=2]
[ext_resource path="res://assets/theme/DejaVuFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/theme/PhoneticTheme.tres" type="Theme" id=4]
[ext_resource path="res://assets/sound/fail.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sound/success.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/background.png" type="Texture" id=8]
[ext_resource path="res://assets/icons/next.png" type="Texture" id=9]
[ext_resource path="res://assets/icons/record.png" type="Texture" id=10]
[ext_resource path="res://assets/icons/speaker.png" type="Texture" id=11]
[ext_resource path="res://art/images/chat.jpg" type="Texture" id=12]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Good" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Word" type="Label" parent="MarginContainer/VBox"]
margin_top = 272.0
margin_right = 1024.0
margin_bottom = 316.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="MainContainer" type="MarginContainer" parent="MarginContainer/VBox"]
margin_top = 320.0
margin_right = 1024.0
margin_bottom = 324.0
size_flags_horizontal = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="MainBox" type="VBoxContainer" parent="MarginContainer/VBox/MainContainer"]
margin_left = 50.0
margin_right = 974.0
margin_bottom = 4.0
size_flags_horizontal = 3
theme = ExtResource( 4 )
alignment = 1

[node name="Box" type="HBoxContainer" parent="MarginContainer/VBox/MainContainer/MainBox"]
margin_right = 924.0
margin_bottom = 4.0
alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBox/MainContainer/MainBox/Box"]
margin_left = 460.0
margin_right = 460.0
margin_bottom = 4.0

[node name="Image" type="TextureRect" parent="MarginContainer/VBox/MainContainer/MainBox/Box/Control"]
margin_right = 200.0
margin_bottom = 200.0
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainerButton" type="VBoxContainer" parent="MarginContainer/VBox/MainContainer/MainBox/Box"]
margin_left = 464.0
margin_right = 464.0
margin_bottom = 4.0
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBox/MainContainer/MainBox/Box/VBoxContainerButton"]

[node name="Speak" type="TextureButton" parent="MarginContainer/VBox/MainContainer/MainBox/Box/VBoxContainerButton/Control"]
margin_right = 100.0
margin_bottom = 100.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="MarginContainer/VBox/MainContainer/MainBox/Box/VBoxContainerButton"]
margin_top = 4.0
margin_bottom = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Record" type="TextureButton" parent="MarginContainer/VBox/MainContainer/MainBox/Box/VBoxContainerButton/Control2"]
margin_right = 100.0
margin_bottom = 100.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImgBorel" type="MarginContainer" parent="MarginContainer/VBox"]
margin_top = 328.0
margin_right = 1024.0
margin_bottom = 328.0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxBorel" type="HBoxContainer" parent="MarginContainer/VBox/ImgBorel"]
margin_right = 1024.0
alignment = 1

[node name="Back" type="Button" parent="."]
margin_right = 100.0
margin_bottom = 102.0
theme = ExtResource( 4 )
icon = ExtResource( 2 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -102.0
icon = ExtResource( 9 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/VBox/MainContainer/MainBox/Box/VBoxContainerButton/Control/Speak" to="." method="_on_Speak_pressed"]
[connection signal="pressed" from="MarginContainer/VBox/MainContainer/MainBox/Box/VBoxContainerButton/Control2/Record" to="." method="_on_Record_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
